upload bitcoin meme images

--- a/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
+++ b/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
@@ -278,13 +278,13 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin003.jpg" alt="bitcoin003"></p>
+  <p><img src="/images/bitcoin002.jpg" alt="bitcoin002"></p>
 <ul>
 <li>
 <p>炒币被割，就有如剃发受戒。断除烦恼，了却牵挂。</p>
 </li>
 <li>
-<p>在所有的庞氏骗局中，比特币是最好的那个。</p>
+<p><strong>在所有的庞氏骗局中，比特币是最好的那个</strong>。</p>
 </li>
 <li>
 <p>比特币在中国属于虚拟资产，你不能交易，但你可以通过其他方式获取并持有。比如你通过某境外平台传播中国文化，用中文和国外友人交流，然后你就可以获得感谢费，或者你可以给别人打赏。国外友人可能会要求你提供银行流水信息，进而确定你是良民。只有真正的良民，才配传播中国文化，才配获得打赏。</p>
