--- a/闲话比特币003中本聪不介意被人曲解/index.html
+++ b/闲话比特币003中本聪不介意被人曲解/index.html
@@ -9,7 +9,7 @@
 <title>闲话比特币003：中本聪不介意被人曲解 | 杨靖武</title>
 <meta name="title" content="闲话比特币003：中本聪不介意被人曲解" />
 <meta name="description" content="  中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？
-  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺？哪个宗教在历史上，不是内部、外部杀得血流成河？
+  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺§？哪个宗教在历史上，不是内部、外部杀得血流成河？
   充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。
   比特币，以及从其衍生出来的12801种（截至2021年10月18日 02:42）加密货币，会像病毒一样在这个世界传播，对于病毒来说，重要的不是变异的方向是不是他自己想要的，重要的是：是否有新的宿主可以被感染。
   孔子死了，但是留下万亿人做他的备胎，以太坊，SHIB，TRON……如果其中任何一种能篡比特币位而成功，我随时欢迎，那说明比特币完成了他的使命。备胎扶正，再正常不过的事。
@@ -20,7 +20,7 @@
 
 <meta property="og:title" content="闲话比特币003：中本聪不介意被人曲解" />
 <meta property="og:description" content="  中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？
-  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺？哪个宗教在历史上，不是内部、外部杀得血流成河？
+  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺§？哪个宗教在历史上，不是内部、外部杀得血流成河？
   充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。
   比特币，以及从其衍生出来的12801种（截至2021年10月18日 02:42）加密货币，会像病毒一样在这个世界传播，对于病毒来说，重要的不是变异的方向是不是他自己想要的，重要的是：是否有新的宿主可以被感染。
   孔子死了，但是留下万亿人做他的备胎，以太坊，SHIB，TRON……如果其中任何一种能篡比特币位而成功，我随时欢迎，那说明比特币完成了他的使命。备胎扶正，再正常不过的事。
@@ -39,7 +39,7 @@
 
 <meta name="twitter:title" content="闲话比特币003：中本聪不介意被人曲解"/>
 <meta name="twitter:description" content="  中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？
-  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺？哪个宗教在历史上，不是内部、外部杀得血流成河？
+  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺§？哪个宗教在历史上，不是内部、外部杀得血流成河？
   充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。
   比特币，以及从其衍生出来的12801种（截至2021年10月18日 02:42）加密货币，会像病毒一样在这个世界传播，对于病毒来说，重要的不是变异的方向是不是他自己想要的，重要的是：是否有新的宿主可以被感染。
   孔子死了，但是留下万亿人做他的备胎，以太坊，SHIB，TRON……如果其中任何一种能篡比特币位而成功，我随时欢迎，那说明比特币完成了他的使命。备胎扶正，再正常不过的事。
@@ -50,7 +50,7 @@
 
 <meta itemprop="name" content="闲话比特币003：中本聪不介意被人曲解">
 <meta itemprop="description" content="  中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？
-  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺？哪个宗教在历史上，不是内部、外部杀得血流成河？
+  哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺§？哪个宗教在历史上，不是内部、外部杀得血流成河？
   充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。
   比特币，以及从其衍生出来的12801种（截至2021年10月18日 02:42）加密货币，会像病毒一样在这个世界传播，对于病毒来说，重要的不是变异的方向是不是他自己想要的，重要的是：是否有新的宿主可以被感染。
   孔子死了，但是留下万亿人做他的备胎，以太坊，SHIB，TRON……如果其中任何一种能篡比特币位而成功，我随时欢迎，那说明比特币完成了他的使命。备胎扶正，再正常不过的事。
@@ -270,15 +270,16 @@
 </p>
 
 <content>
-  <ul>
+  <p><img src="/images/bitcoin003.jpg" alt="bitcoin003"></p>
+<ul>
 <li>
-<p>中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？</p>
+<p><strong>中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他</strong>，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？</p>
 </li>
 <li>
-<p>哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺？哪个宗教在历史上，不是内部、外部杀得血流成河？</p>
+<p>哪怕是澳本聪，吴忌寒，他们也是在以自己对白皮书的理解，在传播中本聪的思想。佛家有句话叫”若要佛法兴，唯有僧赞僧”，为什么僧赞僧？《西游记》中，阿傩、迦叶在发放经书时，讲条件，公然收孙猴子保护费，他们这肯定不是头一遭，却为何能稳坐雷音寺§？哪个宗教在历史上，不是内部、外部杀得血流成河？</p>
 </li>
 <li>
-<p>充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。</p>
+<p><strong>充满力量的思想，不怕被人误解，不怕被人刻意曲解，就怕不能被传播，就怕没有传播的土壤。</strong></p>
 </li>
 <li>
 <p>比特币，以及从其衍生出来的12801种（截至2021年10月18日 02:42）加密货币，会像病毒一样在这个世界传播，对于病毒来说，重要的不是变异的方向是不是他自己想要的，重要的是：是否有新的宿主可以被感染。</p>
@@ -287,7 +288,7 @@
 <p>孔子死了，但是留下万亿人做他的备胎，以太坊，SHIB，TRON……如果其中任何一种能篡比特币位而成功，我随时欢迎，那说明比特币完成了他的使命。备胎扶正，再正常不过的事。</p>
 </li>
 <li>
-<p>这12801种的各类猫猫狗狗猪猪币，以及无数将生未生的后起之秀，都是比特币的备胎。如果比特币有一天亡了，那就是他该亡了，我会说，亡得好！</p>
+<p>这12801种的各类猫猫狗狗猪猪币，以及无数将生未生的后起之秀，都是比特币的备胎。<strong>如果比特币有一天亡了，那就是他该亡了，我会说，亡得好！</strong></p>
 </li>
 </ul>
 <hr>
