--- a/闲话比特币005shib将币圈推向了后现代推向了虚无/index.html
+++ b/闲话比特币005shib将币圈推向了后现代推向了虚无/index.html
@@ -266,9 +266,10 @@
 </p>
 
 <content>
-  <ul>
+  <p><img src="/images/bitcoin005.jpg" alt="bitcoin005"></p>
+<ul>
 <li>
-<p>很多人看着这花花绿绿一大堆币，以为比特币和这一大堆“特特币、沃特币、艾特币”只是名字上有区别，虽然都有个“币”字，其实它们和比特币的差别，可能比iPhone和草履虫之间的差别还要大。</p>
+<p>很多人看着这花花绿绿一大堆币，以为比特币和这一大堆“特特币、沃特币、艾特币”只是名字上有区别，虽然都有个“币”字，其实<strong>它们和比特币的差别，可能比iPhone和草履虫之间的差别还要大。</strong></p>
 </li>
 <li>
 <p>SHIB群体充斥着狂欢、狂喜，SHIB将币圈推向了后现代，推向了虚无。在加密货币之前，压根就没有一个能供全世界人民共同参与，24小时互动，然后门槛还极低的游戏。加密货币的出现改变了这一局面，尤其是SHIB这样发行量巨大、价格低廉的山寨币。</p>
@@ -289,7 +290,7 @@
 <p>按中本聪设计的2100万个比特币的总数来算，全球共78亿人（参见维基百科，截至2021年10月27日），人均仅能分到0.00269个比特币（实际上，排除早期大量丢失的币，以及中本聪永久锁仓的币，这个人均份额，只会少不会多），也就是人均269000聪，如果比特币价格涨到1聪 = 1元，那就是人均269000聪 = 26.9万人民币，一个看起来异常合理的数字。</p>
 </li>
 <li>
-<p>买大饼似锦衣夜行，买SHIB如迎风尿三丈！</p>
+<p><strong>买大饼似锦衣夜行，买SHIB如迎风尿三丈！</strong></p>
 </li>
 <li>
 <p>绝壁垒城池，浮沙筑高台。如果有一天，SHIB市值超过大饼，请向我们这些早期啃屎队敬礼！</p>
@@ -301,7 +302,7 @@
 <p>买币不能买那种解释起来太复杂的，复杂了门槛高。普通人无法理解。</p>
 </li>
 <li>
-<p>如果一个币涨了300%，接下来最可能的走向不是跌30%，而是接着再涨3000%。</p>
+<p><strong>如果一个币涨了300%，接下来最可能的走向不是跌30%，而是接着再涨3000%。</strong></p>
 </li>
 <li>
 <p>比特币已经被捶出金刚不坏之身了，护城河可抵30万座北境长城。</p>
