--- a/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
+++ b/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
@@ -282,13 +282,13 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin-odyssey-004/bitcoin-sex.jpg" alt="bitcoin-sex"></p>
+  <p><img src="/images/bitcoin004.jpg" alt="bitcoin004"></p>
 <ul>
 <li>
-<p>SHIB的社会学意义，在于其祛魅作用，在于戳穿很多人为了忙碌而忙碌、为了勤奋而勤奋、为了努力而努力的装逼行为。醉酒当歌，人生几何。何以解忧，唯有暴富。</p>
+<p><strong>SHIB的社会学意义，在于其祛魅作用</strong>，在于戳穿很多人为了忙碌而忙碌、为了勤奋而勤奋、为了努力而努力的装逼行为。醉酒当歌，人生几何。何以解忧，唯有暴富。</p>
 </li>
 <li>
-<p>SHIB，一坨纯粹的，干净的，脱离了低级趣味的空气。</p>
+<p><strong>SHIB，一坨纯粹的，干净的，脱离了低级趣味的空气。</strong></p>
 </li>
 <li>
 <p>各种币，包括SHIB，其实后面有一个非常危险的逻辑，那就是铸币权的转移。实际上，旧世界的秩序已经解体，垄断暴力实际上就是在垄断铸币权，但是这一切已经没了。Gone with the wind！</p>
@@ -306,10 +306,10 @@
 <p>不差钱这一句，可以回答你所有对马斯克的质疑和挑战。马斯克这人痞性十足，淫气担当，而且摸到的天花板比你我踩过的地板还多。对于一个常常摸天花板，被政府各种掣肘的强人，区块链就是核武器级别的锤天花板工具，区块链天生就是来锤烂天花板的。</p>
 </li>
 <li>
-<p>有很多人批评狗狗币增发，实际上，狗狗币再怎么增发也比不过全球200多个央行集体放水。狗狗的增发是可预测的，所以不存在信息差和套利空间。央行的增发是抽风式、随机性的，动不动踹你两脚。央行踹你两脚，你哼哼两声都显得怠慢了它。</p>
+<p>有很多人批评狗狗币增发，实际上，狗狗币再怎么增发也比不过全球200多个央行集体放水。<strong>狗狗的增发是可预测的，所以不存在信息差和套利空间。央行的增发是抽风式、随机性的，动不动踹你两脚。央行踹你两脚，你哼哼两声都显得怠慢了它。</strong></p>
 </li>
 <li>
-<p>狗狗的价格是被充分博弈的，而法币的价格是博弈不充分的。以后国家的DCEP，暗地里加20个零，分分钟让你缩水40%，相当你罚没你二十年的阳寿。</p>
+<p>狗狗的价格是被充分博弈的，而法币的价格是博弈不充分的。<strong>以后国家的DCEP，暗地里加20个零，分分钟让你缩水40%，相当你罚没你二十年的阳寿</strong>。</p>
 </li>
 <li>
 <p>狗狗币1分钟增发10000枚，一天1440分钟（24小时*60分钟），增发14400000个狗狗，按现在价格（0.2634美金）算，每天自然抛压才380万美刀；比特币10分钟出1个区块 ，按现在每个区块新产生6.25个比特币，一天1440分钟，每天出144个区块，每天合计900个比特币，按现在价格（62500美金）算，每天自然抛压5600万美刀。比特币每天的自然抛压是狗狗币的14倍！</p>
