modify bitcoin odyssey 006

--- a/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
+++ b/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
@@ -288,7 +288,7 @@
 <p><strong>SHIB的社会学意义，在于其祛魅作用</strong>，在于戳穿很多人为了忙碌而忙碌、为了勤奋而勤奋、为了努力而努力的装逼行为。醉酒当歌，人生几何。何以解忧，唯有暴富。</p>
 </li>
 <li>
-<p><strong>SHIB，一坨纯粹的，干净的，脱离了低级趣味的空气。</strong></p>
+<p>SHIB，一坨纯粹的，干净的，脱离了低级趣味的空气。</p>
 </li>
 <li>
 <p>各种币，包括SHIB，其实后面有一个非常危险的逻辑，那就是铸币权的转移。实际上，旧世界的秩序已经解体，垄断暴力实际上就是在垄断铸币权，但是这一切已经没了。Gone with the wind！</p>
@@ -297,7 +297,7 @@
 <hr>
 <ul>
 <li>
-<p>韭菜已经受够了被精英骑在脖子上收割的日子，他们要发泄，他们要反抗。他们要自己收割自己。对自己挥刀，向死而生。</p>
+<p>韭菜已经受够了被精英骑在脖子上收割的日子，他们要发泄，他们要反抗。他们要自己收割自己。<strong>对自己挥刀，向死而生</strong>。</p>
 </li>
 <li>
 <p>狗狗币的优势是无限增发，然后独立自主。狗狗只要把POW稳住，前途无量。</p>
