--- a/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
+++ b/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
@@ -265,13 +265,13 @@
   <p><img src="/images/bitcoin001.jpg" alt="bitcoin001"></p>
 <ul>
 <li>
-<p>可以喝的茅台和不能吃的大饼，很多人不知道该怎么选。</p>
+<p><strong>可以喝的茅台和不能吃的大饼，很多人不知道该怎么选。</strong></p>
 </li>
 <li>
-<p>美元从上世纪到现在贬值了99%，曾经35美元即可兑换1盎司黄金，而如今1盎司黄金需要1833美金。为什么美元波动这么大，却还能成为货币？这足以证明，波动与否跟是否能做货币没有必然联系。</p>
+<p>美元从上世纪到现在贬值了99%，曾经35美元即可兑换1盎司黄金，而如今1盎司黄金需要1833美金。为什么美元波动这么大，却还能成为货币？这足以证明，<strong>波动与否跟是否能做货币没有必然联系。</strong></p>
 </li>
 <li>
-<p>为了尽快开始违背人类文明，比特币兑美元价格需要尽快涨到100万美元一个左右。</p>
+<p>为了尽快开始违背人类文明，<strong>比特币兑美元价格需要尽快涨到100万美元一个左右。</strong></p>
 </li>
 <li>
 <p>如果你不在车上，时代的车轮碾过你的时候，面朝黄土和面朝青天是一个结果</p>
