--- a/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
+++ b/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
@@ -297,7 +297,7 @@
 <hr>
 <ul>
 <li>
-<p>韭菜已经受够了被精英骑在脖子上收割的日子，他们要发泄，他们要反抗。他们要自己收割自己。<strong>对自己挥刀，向死而生</strong>。</p>
+<p>韭菜已经受够了被精英骑在脖子上收割的日子，他们要发泄，他们要反抗。他们要自己收割自己。<strong>对自己挥刀，向死而生。</strong></p>
 </li>
 <li>
 <p>狗狗币的优势是无限增发，然后独立自主。狗狗只要把POW稳住，前途无量。</p>
@@ -309,7 +309,7 @@
 <p>有很多人批评狗狗币增发，实际上，狗狗币再怎么增发也比不过全球200多个央行集体放水。<strong>狗狗的增发是可预测的，所以不存在信息差和套利空间。央行的增发是抽风式、随机性的，动不动踹你两脚。央行踹你两脚，你哼哼两声都显得怠慢了它。</strong></p>
 </li>
 <li>
-<p>狗狗的价格是被充分博弈的，而法币的价格是博弈不充分的。<strong>以后国家的DCEP，暗地里加20个零，分分钟让你缩水40%，相当你罚没你二十年的阳寿</strong>。</p>
+<p>狗狗的价格是被充分博弈的，而法币的价格是博弈不充分的。<strong>以后国家的DCEP，暗地里加20个零，分分钟让你缩水40%，相当你罚没你二十年的阳寿。</strong></p>
 </li>
 <li>
 <p>狗狗币1分钟增发10000枚，一天1440分钟（24小时*60分钟），增发14400000个狗狗，按现在价格（0.2634美金）算，每天自然抛压才380万美刀；比特币10分钟出1个区块 ，按现在每个区块新产生6.25个比特币，一天1440分钟，每天出144个区块，每天合计900个比特币，按现在价格（62500美金）算，每天自然抛压5600万美刀。比特币每天的自然抛压是狗狗币的14倍！</p>
