--- a/闲话比特币007到底要买多少种币才能安稳过好这一生/index.html
+++ b/闲话比特币007到底要买多少种币才能安稳过好这一生/index.html
@@ -278,7 +278,7 @@
 <p>每一个微商，每一个赣南果农，都应该拥抱未来，接受加密货币支付。</p>
 </li>
 <li>
-<p>在中国，比特币属于虚拟资产，你不能交易，但你可以通过其他方式获取并持有。比如你可以通过某境外平台传播中国文化，用中文和国外友人进行交流，然后你就可以获得比特币打赏，或者也可以给别人打赏比特币。国外友人可能会要求你提供银行卡流水信息，进而确定你是良民。因为只有良民，才配传播中国文化，才配获得比特币打赏。</p>
+<p>在中国，比特币属于虚拟资产，你不能交易，但你可以通过其他方式获取并持有。比如你可以通过某境外平台传播中国文化，用中文和国外友人进行交流，然后你就可以获得比特币打赏，或者也可以给别人打赏比特币。国外友人可能会要求你提供银行卡流水信息，进而确定你是良民。<strong>因为只有良民，才配传播中国文化，才配获得比特币打赏。</strong></p>
 </li>
 <li>
 <p>每次看到一波又一波不知名的山寨币上涨，翻倍，就会想：<strong>到底要买多少种币，才能安稳过好这一生！</strong></p>
