--- a/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
+++ b/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
@@ -284,7 +284,7 @@
 <p>炒币被割，就有如剃发受戒。断除烦恼，了却牵挂。</p>
 </li>
 <li>
-<p><strong>在所有的庞氏骗局中，比特币是最好的那个</strong>。</p>
+<p><strong>在所有的庞氏骗局中，比特币是最好的那个。</strong></p>
 </li>
 <li>
 <p>比特币在中国属于虚拟资产，你不能交易，但你可以通过其他方式获取并持有。比如你通过某境外平台传播中国文化，用中文和国外友人交流，然后你就可以获得感谢费，或者你可以给别人打赏。国外友人可能会要求你提供银行流水信息，进而确定你是良民。只有真正的良民，才配传播中国文化，才配获得打赏。</p>
@@ -293,7 +293,7 @@
 <p>比特币通过毫秒级的波动来拟合这个世界，谁能更精确地锚定价值，一目了然。</p>
 </li>
 <li>
-<p>比特币只解决一般交易等价物的问题，解决铸币时作弊的问题。比特币并不尝试作政治制度上的创新。比特币所承担的最重要的角色是：一个足够廉洁的铸币机构。</p>
+<p>比特币只解决一般交易等价物的问题，解决铸币时作弊的问题。比特币并不尝试作政治制度上的创新。<strong>比特币所承担的最重要的角色是：一个足够廉洁的铸币机构。</strong></p>
 </li>
 <li>
 <p>你持有人民币和美元，我持有狗狗币和比特币，我们互道一声，珍重！</p>
