--- a/使用umbrel搭建比特币节点/index.html
+++ b/使用umbrel搭建比特币节点/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>使用Umbrel搭建比特币节点 | 杨靖武</title>
 <meta name="title" content="使用Umbrel搭建比特币节点" />
-<meta name="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建（无任何技术门槛）。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
+<meta name="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
 支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
@@ -23,7 +23,7 @@
 
 
 <meta property="og:title" content="使用Umbrel搭建比特币节点" />
-<meta property="og:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建（无任何技术门槛）。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
+<meta property="og:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
 支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
@@ -46,7 +46,7 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="使用Umbrel搭建比特币节点"/>
-<meta name="twitter:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建（无任何技术门槛）。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
+<meta name="twitter:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
 支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
@@ -61,7 +61,7 @@
 
 
 <meta itemprop="name" content="使用Umbrel搭建比特币节点">
-<meta itemprop="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建（无任何技术门槛）。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
+<meta itemprop="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
 支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
@@ -287,7 +287,7 @@
 
 <content>
   <h2 id="σ-つ-ω-つ下图是搭建好之后的样子">─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子：</h2>
-<p>注：<strong>搭建比特币节点有多种方式，本教程采用树莓派 + Umbrel的方式进行搭建</strong>（无任何技术门槛）。这种搭建方式的好处很多，包括<strong>足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面）</strong>，此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，<strong>大大降低普通用户进入比特币生态的门槛</strong>，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！</p>
+<p>注：搭建比特币节点有多种方式，本教程采用<strong>树莓派 + Umbrel</strong>的方式进行搭建，<strong>无任何技术门槛</strong>。这种搭建方式的好处很多，包括<strong>足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面）</strong>，此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，<strong>大大降低普通用户进入比特币生态的门槛</strong>，相信大家在探索一番后，也会对Umbrel的<strong>强大</strong>之处深有体会！</p>
 <p><img src="/images/build-your-personal-bitcoin-node/introduce2.png" alt="introduce2"></p>
 <p><strong>支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！</strong></p>
 <p><strong>好了，下面正式开始教程：</strong></p>
@@ -318,7 +318,7 @@
 </ul>
 <hr>
 <h2 id="2等待到货">2.等待到货</h2>
-<p>下单购买以上设备后，就耐心等待吧，等待将它们一件件从快递小哥那领回家。在等待期间，你可以通过以下事情<strong>打发时光</strong>：</p>
+<p>下单购买以上设备后，就<strong>耐心等待</strong>吧，等待将它们一件件从快递小哥那领回家。在等待期间，你可以通过以下事情<strong>打发时光</strong>：</p>
 <ul>
 <li>阅读：<a href="https://github.com/ReardonYang/ReardonYang.github.io/blob/master/bitcoin.pdf">比特币白皮书</a>
 <img src="/images/build-your-personal-bitcoin-node/bitcoin-paper.png" alt="bitcoin-paper"></li>
