--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <li><a href="https://github.com/ReardonYang">Github</a></li>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
 </ul>
-<p>如果你有<strong>任何问题</strong>想要交流，请通过<strong>Twitter或者豆瓣</strong>联系我！</p>
+<p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过 <a href="https://twitter.com/ReardonYang">Twitter</a> 或者 <a href="https://www.douban.com/people/57644512/">豆瓣</a> 联系我！</strong></p>
 <p><img src="/images/self.jpg" alt="self"></p>
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
