--- a/使用umbrel搭建比特币节点/index.html
+++ b/使用umbrel搭建比特币节点/index.html
@@ -9,7 +9,7 @@
 <title>使用Umbrel搭建比特币节点 | 杨靖武</title>
 <meta name="title" content="使用Umbrel搭建比特币节点" />
 <meta name="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
-支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
+搭建好后，支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
  准备/购买所需设备； 等待到货； 准备就绪； 下载Umbrel和Balena Etcher； 在microSD存储卡中安装/写入Umbrel； 连接设备； 完成；  以下为详细步骤：
@@ -24,7 +24,7 @@
 
 <meta property="og:title" content="使用Umbrel搭建比特币节点" />
 <meta property="og:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
-支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
+搭建好后，支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
  准备/购买所需设备； 等待到货； 准备就绪； 下载Umbrel和Balena Etcher； 在microSD存储卡中安装/写入Umbrel； 连接设备； 完成；  以下为详细步骤：
@@ -47,7 +47,7 @@
 
 <meta name="twitter:title" content="使用Umbrel搭建比特币节点"/>
 <meta name="twitter:description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
-支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
+搭建好后，支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
  准备/购买所需设备； 等待到货； 准备就绪； 下载Umbrel和Balena Etcher； 在microSD存储卡中安装/写入Umbrel； 连接设备； 完成；  以下为详细步骤：
@@ -62,7 +62,7 @@
 
 <meta itemprop="name" content="使用Umbrel搭建比特币节点">
 <meta itemprop="description" content="─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子： 注：搭建比特币节点有多种方式，本教程采用树莓派 &#43; Umbrel的方式进行搭建，无任何技术门槛。这种搭建方式的好处很多，包括足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面），此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，大大降低普通用户进入比特币生态的门槛，相信大家在探索一番后，也会对Umbrel的强大之处深有体会！
-支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
+搭建好后，支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！
 好了，下面正式开始教程：
  使用Umbrel搭建比特币全节点，需要以下几个步骤：
  准备/购买所需设备； 等待到货； 准备就绪； 下载Umbrel和Balena Etcher； 在microSD存储卡中安装/写入Umbrel； 连接设备； 完成；  以下为详细步骤：
@@ -287,9 +287,10 @@
 
 <content>
   <h2 id="σ-つ-ω-つ下图是搭建好之后的样子">─=≡Σ( つ₿ ω ₿)つ下图是搭建好之后的样子：</h2>
+<p><img src="/images/build-your-personal-bitcoin-node/introduce1.png" alt="introduce1"></p>
 <p>注：搭建比特币节点有多种方式，本教程采用<strong>树莓派 + Umbrel</strong>的方式进行搭建，<strong>无任何技术门槛</strong>。这种搭建方式的好处很多，包括<strong>足够独立，节能，稳定，安全，数据完全自我控制，界面美观（可视化界面）</strong>，此外，可玩性极强，Umbrel提供比特币应用商店，提供闪电网络、区块链浏览器等各类应用，<strong>大大降低普通用户进入比特币生态的门槛</strong>，相信大家在探索一番后，也会对Umbrel的<strong>强大</strong>之处深有体会！</p>
 <p><img src="/images/build-your-personal-bitcoin-node/introduce2.png" alt="introduce2"></p>
-<p><strong>支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！</strong></p>
+<p><strong>搭建好后，支持转账、收款等常规操作，以及查看比特币余额、转账记录、区块高度、当前全网算力值、全节点所占硬盘空间大小等一系列信息，更多功能，请自行探索！</strong></p>
 <p><strong>好了，下面正式开始教程：</strong></p>
 <hr>
 <p><strong>使用Umbrel搭建比特币全节点，需要以下几个步骤：</strong></p>
