--- a/中本聪语录/index.html
+++ b/中本聪语录/index.html
@@ -344,7 +344,7 @@
 </blockquote>
 <p>(₿ ω ₿)</p>
 <blockquote>
-<p><strong>&mdash;“丢失的比特币会让其他人所持有比特币增值，（如果有人丢失了比特币，）就把这看作是对其他每个人的馈赠吧”—中本聪</strong></p>
+<p><strong>&mdash;“丢失的比特币会让其他人所持有比特币增值，（如果有人丢失了比特币，）就把这看作是对其他每个人的馈赠吧。”—中本聪</strong></p>
 </blockquote>
 <blockquote>
 <p>&mdash;<code>“Lost coins only make everyone else’s coins worth slightly more. Think of it as a donation to everyone.”— Satoshi Nakamoto</code></p>
