--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
 <p>💖 这里会记录一些个人经验心得，日常琐碎，以及一些有趣的事情。</p>
-<p>此外，希望通过写文章的方式，让我进行更加<strong>专业和深入</strong>的思考。</p>
+<p>希望通过写文章的方式，让我进行更加<strong>专业和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
 <li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
