--- a/中本聪语录/index.html
+++ b/中本聪语录/index.html
@@ -456,7 +456,7 @@
 </blockquote>
 <p>(₿ ᴥ ₿)</p>
 <blockquote>
-<p><strong>“叹息……为什么要删除（比特币）钱包而不是将其进行转移，保留旧的副本来以防万一呢？你永远也不应该删除（比特币）钱包。”—中本聪</strong></p>
+<p><strong>“叹息……为什么要删除（比特币）钱包而不是将其进行转移，然后保留旧的副本来以防万一呢？你永远也不应该删除（比特币）钱包。”—中本聪</strong></p>
 </blockquote>
 <blockquote>
 <p><code>“Sigh... why delete a wallet instead of moving it aside and keeping the old copy just in case? You should never delete a wallet.”— Satoshi Nakamoto</code></p>
@@ -484,7 +484,7 @@
 </blockquote>
 <p>(₿ ᴥ ₿)</p>
 <blockquote>
-<p><strong>“一个没有（比特币）交易数据的区块头大约有80个字节。按照区块每10分钟生成一次，则一年总大小为： 80字节 * 6 * 24 * 365 = 4.2MB。在现今2008年，主流在售计算机系统的内存通常是2GB，按照摩尔定律进行预测，（计算机内存）每年增长1.2GB，所以，即使是将区块头保留在内存中，存储空间也不会成为问题。”—中本聪</strong></p>
+<p><strong>“一个没有（比特币）交易数据的区块头大约有80个字节。比特币区块每10分钟生成一次，则一年总大小为： 80字节 * 6 * 24 * 365 = 4.2MB。在现今2008年，主流在售计算机系统的内存通常是2GB，按照摩尔定律进行预测，（计算机内存）每年增长1.2GB，所以，即使是将区块头保留在内存中，存储空间也不会成为问题。”—中本聪</strong></p>
 </blockquote>
 <blockquote>
 <p><code>“A block header with no transactions would be about 80 bytes. If we suppose blocks are generated every 10 minutes, 80 bytes * 6 * 24 * 365 = 4.2MB per year. With computer systems typically selling with 2GB of RAM as of 2008, and Moore’s Law predicting current growth of 1.2GB per year, storage should not be a problem even if the block headers must be kept in memory.”— Satoshi Nakamoto</code></p>
