--- a/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
+++ b/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
@@ -262,7 +262,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin001.jpg" alt="bitcoin001"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin001.jpg" alt="bitcoin001"></p>
 <ul>
 <li>
 <p><strong>可以喝的茅台和不能吃的大饼，很多人不知道该怎么选。</strong></p>
