--- a/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
+++ b/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
@@ -278,7 +278,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin002.jpg" alt="bitcoin002"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin002.jpg" alt="bitcoin002"></p>
 <ul>
 <li>
 <p>炒币被割，就有如剃发受戒。断除烦恼，了却牵挂。</p>
