--- a/闲话比特币003中本聪不介意被人曲解/index.html
+++ b/闲话比特币003中本聪不介意被人曲解/index.html
@@ -270,7 +270,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin003.jpg" alt="bitcoin003"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin003.jpg" alt="bitcoin003"></p>
 <ul>
 <li>
 <p><strong>中本聪不介意被人曲解，就像孔子一样，孔子也不怕人曲解他</strong>，孔门弟子三千，达者七十二人，难道这七十二人里面没有烂货，难道他们都能百分之百理解、贯彻孔子的思想？</p>
