--- a/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
+++ b/闲话比特币004shib的社会学意义在于其祛魅作用/index.html
@@ -282,7 +282,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin004.jpg" alt="bitcoin004"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin004.jpg" alt="bitcoin004"></p>
 <ul>
 <li>
 <p><strong>SHIB的社会学意义，在于其祛魅作用</strong>，在于戳穿很多人为了忙碌而忙碌、为了勤奋而勤奋、为了努力而努力的装逼行为。醉酒当歌，人生几何。何以解忧，唯有暴富。</p>
