--- a/闲话比特币005shib将币圈推向了后现代推向了虚无/index.html
+++ b/闲话比特币005shib将币圈推向了后现代推向了虚无/index.html
@@ -266,7 +266,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin005.jpg" alt="bitcoin005"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin005.jpg" alt="bitcoin005"></p>
 <ul>
 <li>
 <p>很多人看着这花花绿绿一大堆币，以为比特币和这一大堆“特特币、沃特币、艾特币”只是名字上有区别，虽然都有个“币”字，其实<strong>它们和比特币的差别，可能比iPhone和草履虫之间的差别还要大。</strong></p>
