--- a/闲话比特币006在币圈做好人拿好币得好报/index.html
+++ b/闲话比特币006在币圈做好人拿好币得好报/index.html
@@ -282,7 +282,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin006.jpg" alt="bitcoin006"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin006.jpg" alt="bitcoin006"></p>
 <ul>
 <li>
 <p>在币圈，做好人，拿好币，得好报。</p>
