--- a/闲话比特币007到底要买多少种币才能安稳过好这一生/index.html
+++ b/闲话比特币007到底要买多少种币才能安稳过好这一生/index.html
@@ -270,7 +270,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin007.png" alt="bitcoin007"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin007.png" alt="bitcoin007"></p>
 <ul>
 <li>
 <p>山寨币持有者的头颅是最强壮的，即便是受到强力挤压，仍然可以正常存活，甚至还可以连续24小时打高尔夫。</p>
