add copytight and plan

--- a/加密货币行业常用网站/index.html
+++ b/加密货币行业常用网站/index.html
@@ -8,9 +8,9 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>加密货币行业常用网站 | 杨靖武</title>
 <meta name="title" content="加密货币行业常用网站" />
-<meta name="description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息； 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索； 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司； 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+<meta name="description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息。 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索。 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司。 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ FiatMarketCap  简介：对全球各国的法币进行市值排名，此外还包括比特币。想象一下，如果比特币是事实上的全球价值储备。那么各国每1个单位的法币，能够兑换多少聪（Sats）？你在这里可以找到有趣的答案！ 网址：fiatmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ mempool  简介：为比特币社区所构建的区块链浏览器，提供常用的比特币API工具，专注于比特币交易费市场和比特币多层协议生态，没有任何广告、山寨币及第三方跟踪器。 网址：mempool.space  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ 比特币维基百科  简介：向比特币用户、开发人员、相关企业，以及对比特币感兴趣的人提供的比特币百科全书服务。由于该网站资源可供公众自由编辑，读者应注意，网站所提供的材料不代表整个比特币社区的观点，有时可能已经过时、不正确或包含恶意。 网址：bitcoin.it  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
@@ -19,9 +19,9 @@
 
 
 <meta property="og:title" content="加密货币行业常用网站" />
-<meta property="og:description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息； 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索； 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司； 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+<meta property="og:description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息。 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索。 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司。 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ FiatMarketCap  简介：对全球各国的法币进行市值排名，此外还包括比特币。想象一下，如果比特币是事实上的全球价值储备。那么各国每1个单位的法币，能够兑换多少聪（Sats）？你在这里可以找到有趣的答案！ 网址：fiatmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ mempool  简介：为比特币社区所构建的区块链浏览器，提供常用的比特币API工具，专注于比特币交易费市场和比特币多层协议生态，没有任何广告、山寨币及第三方跟踪器。 网址：mempool.space  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ 比特币维基百科  简介：向比特币用户、开发人员、相关企业，以及对比特币感兴趣的人提供的比特币百科全书服务。由于该网站资源可供公众自由编辑，读者应注意，网站所提供的材料不代表整个比特币社区的观点，有时可能已经过时、不正确或包含恶意。 网址：bitcoin.it  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
@@ -38,9 +38,9 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="加密货币行业常用网站"/>
-<meta name="twitter:description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息； 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索； 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司； 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+<meta name="twitter:description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息。 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索。 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司。 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ FiatMarketCap  简介：对全球各国的法币进行市值排名，此外还包括比特币。想象一下，如果比特币是事实上的全球价值储备。那么各国每1个单位的法币，能够兑换多少聪（Sats）？你在这里可以找到有趣的答案！ 网址：fiatmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ mempool  简介：为比特币社区所构建的区块链浏览器，提供常用的比特币API工具，专注于比特币交易费市场和比特币多层协议生态，没有任何广告、山寨币及第三方跟踪器。 网址：mempool.space  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ 比特币维基百科  简介：向比特币用户、开发人员、相关企业，以及对比特币感兴趣的人提供的比特币百科全书服务。由于该网站资源可供公众自由编辑，读者应注意，网站所提供的材料不代表整个比特币社区的观点，有时可能已经过时、不正确或包含恶意。 网址：bitcoin.it  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
@@ -49,9 +49,9 @@
 
 
 <meta itemprop="name" content="加密货币行业常用网站">
-<meta itemprop="description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息； 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索； 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
-✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司； 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+<meta itemprop="description" content="₿ 内容持续更新中……  ✔️ CoinMarketCap  简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息。 网址：coinmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ BlockChair  简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索。 网址：blockchair.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
+✔️ Infinite Market Cap  简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司。 网址：8marketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ FiatMarketCap  简介：对全球各国的法币进行市值排名，此外还包括比特币。想象一下，如果比特币是事实上的全球价值储备。那么各国每1个单位的法币，能够兑换多少聪（Sats）？你在这里可以找到有趣的答案！ 网址：fiatmarketcap.com  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ mempool  简介：为比特币社区所构建的区块链浏览器，提供常用的比特币API工具，专注于比特币交易费市场和比特币多层协议生态，没有任何广告、山寨币及第三方跟踪器。 网址：mempool.space  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
 ✔️ 比特币维基百科  简介：向比特币用户、开发人员、相关企业，以及对比特币感兴趣的人提供的比特币百科全书服务。由于该网站资源可供公众自由编辑，读者应注意，网站所提供的材料不代表整个比特币社区的观点，有时可能已经过时、不正确或包含恶意。 网址：bitcoin.it  -₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-
@@ -244,6 +244,10 @@
 
 <a href="/tool/">工具</a>
 
+<a href="/copyright/">版权</a>
+
+<a href="/plan/">计划</a>
+
 
 <a href="/blog">文章</a>
 
@@ -275,19 +279,19 @@
 <hr>
 <h3 id="-coinmarketcaphttpscoinmarketcapcom">✔️ <a href="https://coinmarketcap.com/">CoinMarketCap</a></h3>
 <ul>
-<li>简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息；</li>
+<li>简介：查询各种加密货币/资产的排名、市值、价格，以及详细信息。</li>
 <li>网址：<a href="https://coinmarketcap.com/">coinmarketcap.com</a></li>
 </ul>
 <p>-₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-</p>
 <h3 id="-blockchairhttpsblockchaircom">✔️ <a href="https://blockchair.com/">BlockChair</a></h3>
 <ul>
-<li>简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索；</li>
+<li>简介：区块链搜索和分析引擎，适用于比特币、狗狗币、以太坊、莱特币、Cardano、Stellar、EOS、Monero、Tezos、Dash、Zcash等各类数字货币，可以按照个性化需求，对区块、交易及其内容进行过滤和排序，还可以对区块链内容进行全文搜索。</li>
 <li>网址：<a href="https://blockchair.com/">blockchair.com</a></li>
 </ul>
 <p>-₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-</p>
 <h3 id="-infinite-market-caphttps8marketcapcom">✔️ <a href="https://8marketcap.com/">Infinite Market Cap</a></h3>
 <ul>
-<li>简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司；</li>
+<li>简介：对全球顶级资产进行市值排名，包括比特币和以太坊等加密货币，黄金和白银等贵金属，苹果和特斯拉等上市公司。</li>
 <li>网址：<a href="https://8marketcap.com/">8marketcap.com</a></li>
 </ul>
 <p>-₿-₿-₿-₿-₿-₿-₿-₿-₿-₿-</p>
