--- a/copyright/index.html
+++ b/copyright/index.html
@@ -9,28 +9,28 @@
 <title>版权 | 杨靖武</title>
 <meta name="title" content="版权" />
 <meta name="description" content="📘 版权声明
-本站所有内容在Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议下。
+本站所有内容在Creative Commons署名-非商业性使用-相同方式共享3.0协议下发表。
 您可以自由地：  共享 — 在任何媒介以任何形式复制、发行本作品 演绎 — 修改、转换或以本作品为基础进行创作  只要你遵守许可协议条款，许可人就无法收回你的这些权利。
-惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
+ 惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
   非商业性使用 — 您不得将本作品用于商业目的。
-  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。
-  没有附加限制 — 您不得适用法律术语或者 技术措施 从而限制其他人做许可协议允许的事情。
-  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的 例外或限制所允许。
-  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。`
+  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议分发您贡献的作品。
+  没有附加限制 — 您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。
+  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的例外或限制所允许。
+  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。
    ⚽ 如需其他使用请联系我。" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="版权" />
 <meta property="og:description" content="📘 版权声明
-本站所有内容在Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议下。
+本站所有内容在Creative Commons署名-非商业性使用-相同方式共享3.0协议下发表。
 您可以自由地：  共享 — 在任何媒介以任何形式复制、发行本作品 演绎 — 修改、转换或以本作品为基础进行创作  只要你遵守许可协议条款，许可人就无法收回你的这些权利。
-惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
+ 惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
   非商业性使用 — 您不得将本作品用于商业目的。
-  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。
-  没有附加限制 — 您不得适用法律术语或者 技术措施 从而限制其他人做许可协议允许的事情。
-  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的 例外或限制所允许。
-  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。`
+  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议分发您贡献的作品。
+  没有附加限制 — 您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。
+  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的例外或限制所允许。
+  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。
    ⚽ 如需其他使用请联系我。" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/copyright/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
@@ -45,31 +45,31 @@
 
 <meta name="twitter:title" content="版权"/>
 <meta name="twitter:description" content="📘 版权声明
-本站所有内容在Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议下。
+本站所有内容在Creative Commons署名-非商业性使用-相同方式共享3.0协议下发表。
 您可以自由地：  共享 — 在任何媒介以任何形式复制、发行本作品 演绎 — 修改、转换或以本作品为基础进行创作  只要你遵守许可协议条款，许可人就无法收回你的这些权利。
-惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
+ 惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
   非商业性使用 — 您不得将本作品用于商业目的。
-  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。
-  没有附加限制 — 您不得适用法律术语或者 技术措施 从而限制其他人做许可协议允许的事情。
-  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的 例外或限制所允许。
-  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。`
+  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议分发您贡献的作品。
+  没有附加限制 — 您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。
+  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的例外或限制所允许。
+  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。
    ⚽ 如需其他使用请联系我。"/>
 
 
 
 <meta itemprop="name" content="版权">
 <meta itemprop="description" content="📘 版权声明
-本站所有内容在Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议下。
+本站所有内容在Creative Commons署名-非商业性使用-相同方式共享3.0协议下发表。
 您可以自由地：  共享 — 在任何媒介以任何形式复制、发行本作品 演绎 — 修改、转换或以本作品为基础进行创作  只要你遵守许可协议条款，许可人就无法收回你的这些权利。
-惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
+ 惟须遵守下列条件：   署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
   非商业性使用 — 您不得将本作品用于商业目的。
-  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。
-  没有附加限制 — 您不得适用法律术语或者 技术措施 从而限制其他人做许可协议允许的事情。
-  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的 例外或限制所允许。
-  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。`
+  相同方式共享 — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议分发您贡献的作品。
+  没有附加限制 — 您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。
+  声明：   您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的例外或限制所允许。
+  不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。
    ⚽ 如需其他使用请联系我。">
 
-<meta itemprop="wordCount" content="37"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
+<meta itemprop="wordCount" content="30"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -279,13 +279,14 @@
 <content>
   <p><strong>📘 版权声明</strong></p>
 <p><img src="/images/cc.jpg" alt="cc"></p>
-<p>本站所有内容在<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议</a>下。</p>
+<p>本站所有内容在<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">Creative Commons署名-非商业性使用-相同方式共享3.0协议</a>下发表。</p>
 <h3 id="您可以自由地">您可以自由地：</h3>
 <ul>
 <li><strong>共享</strong> — 在任何媒介以任何形式复制、发行本作品</li>
 <li><strong>演绎</strong> — 修改、转换或以本作品为基础进行创作</li>
 </ul>
-<p><code>只要你遵守许可协议条款，许可人就无法收回你的这些权利。</code></p>
+<p>只要你遵守许可协议条款，许可人就无法收回你的这些权利。</p>
+<hr>
 <h3 id="惟须遵守下列条件">惟须遵守下列条件：</h3>
 <ul>
 <li>
@@ -295,19 +296,19 @@
 <p><strong>非商业性使用</strong> — 您不得将本作品用于商业目的。</p>
 </li>
 <li>
-<p><strong>相同方式共享</strong> — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。</p>
+<p><strong>相同方式共享</strong> — 如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议分发您贡献的作品。</p>
 </li>
 <li>
-<p><strong>没有附加限制</strong> — 您不得适用法律术语或者 技术措施 从而限制其他人做许可协议允许的事情。</p>
+<p><strong>没有附加限制</strong> — 您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。</p>
 </li>
 </ul>
 <h3 id="声明">声明：</h3>
 <ul>
 <li>
-<p>您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的 例外或限制所允许。</p>
+<p>您不必因为公共领域的作品要素而遵守许可协议，或者您的使用被可适用的例外或限制所允许。</p>
 </li>
 <li>
-<p>不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。`</p>
+<p>不提供担保。许可协议可能不会给与您意图使用的所必须的所有许可。例如，其他权利比如形象权、隐私权或人格权可能限制您如何使用作品。</p>
 </li>
 </ul>
 <hr>
