upload bitcoin odyssey 010

--- a/闲话比特币009全球化从区块链技术出现才真正开始破局/index.html
+++ b/闲话比特币009全球化从区块链技术出现才真正开始破局/index.html
@@ -270,7 +270,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin-odyssey/bitcoin009.jpg" alt="bitcoin-lip"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin009.jpg" alt="bitcoin009"></p>
 <ul>
 <li>
 <p>全球化，到了区块链这里，才真正开始破局。也就是马云说的，用商业，经济逻辑，覆盖古典时代的文化交流，政治交流意义上的全球化。</p>
