--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
 </a>
 <nav><a href="/">首页</a>
 
+<a href="/category/">分类</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
@@ -222,7 +224,7 @@
 <a href="/plan/">计划</a>
 
 
-<a href="/blog">文章</a>
+<a href="/blog">全部文章</a>
 
 </nav>
 
@@ -242,9 +244,9 @@
 <p>希望通过写文章的方式，让我进行更加<strong>专业和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
-<li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
-<li><a href="https://github.com/ReardonYang">Github</a></li>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
+<li><a href="https://github.com/ReardonYang">Github</a></li>
+<li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 </ul>
 <p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过 <a href="https://twitter.com/ReardonYang">Twitter</a> 或者 <a href="https://www.douban.com/people/57644512/">豆瓣</a> 联系我！</strong></p>
 <p><img src="/images/self.jpg" alt="self"></p>
