--- a/比特币是时间/index.html
+++ b/比特币是时间/index.html
@@ -282,6 +282,8 @@
 </a>
 <nav><a href="/">首页</a>
 
+<a href="/category/">分类</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
@@ -289,7 +291,7 @@
 <a href="/plan/">计划</a>
 
 
-<a href="/blog">文章</a>
+<a href="/blog">全部文章</a>
 
 </nav>
 
