--- a/404.html
+++ b/404.html
@@ -213,6 +213,8 @@
 </a>
 <nav><a href="/">首页</a>
 
+<a href="/category/">分类</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
@@ -220,7 +222,7 @@
 <a href="/plan/">计划</a>
 
 
-<a href="/blog">文章</a>
+<a href="/blog">全部文章</a>
 
 </nav>
 
