--- a/闲话比特币006在币圈做好人拿好币得好报/index.html
+++ b/闲话比特币006在币圈做好人拿好币得好报/index.html
@@ -254,6 +254,8 @@
 </a>
 <nav><a href="/">首页</a>
 
+<a href="/category/">分类</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
@@ -261,7 +263,7 @@
 <a href="/plan/">计划</a>
 
 
-<a href="/blog">文章</a>
+<a href="/blog">全部文章</a>
 
 </nav>
 
