--- a/香港/index.html
+++ b/香港/index.html
@@ -266,6 +266,8 @@
 </a>
 <nav><a href="/">首页</a>
 
+<a href="/category/">分类</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
@@ -273,7 +275,7 @@
 <a href="/plan/">计划</a>
 
 
-<a href="/blog">文章</a>
+<a href="/blog">全部文章</a>
 
 </nav>
 
