--- a/index.html
+++ b/index.html
@@ -252,11 +252,12 @@
 <p><img src="/images/self.jpg" alt="self"></p>
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
+<li><a href="https://tippin.me/@ReardonYang">(₿ ᴥ ₿)</a></li>
 <li>₿-比特币：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
 <li>Ð-狗狗币：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
 </ul>
 <hr>
-<p>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</p>
+<p><code>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</code></p>
 
 
   </main>
