--- a/plan/index.html
+++ b/plan/index.html
@@ -9,7 +9,7 @@
 <title>计划 | 杨靖武</title>
 <meta name="title" content="计划" />
 <meta name="description" content="⏰ 内容更新计划
--&gt;近期将要完成的内容 🚀
+ -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
  闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
@@ -18,7 +18,7 @@
 
 <meta property="og:title" content="计划" />
 <meta property="og:description" content="⏰ 内容更新计划
--&gt;近期将要完成的内容 🚀
+ -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
  闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
@@ -35,7 +35,7 @@
 
 <meta name="twitter:title" content="计划"/>
 <meta name="twitter:description" content="⏰ 内容更新计划
--&gt;近期将要完成的内容 🚀
+ -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
  闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”"/>
@@ -44,7 +44,7 @@
 
 <meta itemprop="name" content="计划">
 <meta itemprop="description" content="⏰ 内容更新计划
--&gt;近期将要完成的内容 🚀
+ -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
  闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”">
@@ -260,6 +260,7 @@
 
 <content>
   <p><strong>⏰ 内容更新计划</strong></p>
+<hr>
 <p>-&gt;<strong>近期将要完成的内容</strong> 🚀</p>
 <ul>
 <li>比特币闪电网络介绍；</li>
@@ -280,7 +281,7 @@
 <li>接触比特币的那一年，我在做什么</li>
 </ul>
 <hr>
-<p>“禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”</p>
+<p><code>“禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”</code></p>
 
 </content>
 <p>
