--- a/tool/index.html
+++ b/tool/index.html
@@ -9,14 +9,14 @@
 <title>工具 | 杨靖武</title>
 <meta name="title" content="工具" />
 <meta name="description" content="🎸 工欲善其事必先利其器
--&gt;日常使用工具
+ -&gt;日常使用工具
  比特币 Bitcoin：非主权货币 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包  “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="工具" />
 <meta property="og:description" content="🎸 工欲善其事必先利其器
--&gt;日常使用工具
+ -&gt;日常使用工具
  比特币 Bitcoin：非主权货币 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包  “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/tool/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
@@ -31,14 +31,14 @@
 
 <meta name="twitter:title" content="工具"/>
 <meta name="twitter:description" content="🎸 工欲善其事必先利其器
--&gt;日常使用工具
+ -&gt;日常使用工具
  比特币 Bitcoin：非主权货币 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包  “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”"/>
 
 
 
 <meta itemprop="name" content="工具">
 <meta itemprop="description" content="🎸 工欲善其事必先利其器
--&gt;日常使用工具
+ -&gt;日常使用工具
  比特币 Bitcoin：非主权货币 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包  “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
 
 <meta itemprop="wordCount" content="14"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
@@ -252,6 +252,7 @@
 
 <content>
   <p><strong>🎸 工欲善其事必先利其器</strong></p>
+<hr>
 <p>-&gt;<strong>日常使用工具</strong></p>
 <ul>
 <li><a href="https://bitcoin.org/">比特币 Bitcoin：非主权货币</a></li>
@@ -263,7 +264,7 @@
 <li><a href="https://www.ledger.com/">Ledger：安全的加密货币/资产硬件钱包</a></li>
 </ul>
 <p><img src="/images/tool-paper.jpg" alt="tool-paper"></p>
-<p>“古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”</p>
+<p><code>“古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”</code></p>
 
 </content>
 <p>
