upload bitcoin odyssey 011

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
 <li><a href="https://tippin.me/@ReardonYang">(₿ ᴥ ₿)</a></li>
-<li>₿-比特币：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
-<li>Ð-狗狗币：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
+<li>₿-BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
+<li>Ð-DOGE：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
 </ul>
 <hr>
 <p><code>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</code></p>
