--- a/闲话比特币011场内至少留一个比特币场外至少留一个月馒头钱/index.html
+++ b/闲话比特币011场内至少留一个比特币场外至少留一个月馒头钱/index.html
@@ -292,7 +292,7 @@
 </p>
 
 <content>
-  <p><img src="/images/bitcoin-odyssey/bitcoin011.png/" alt="bitcoin011"></p>
+  <p><img src="/images/bitcoin-odyssey/bitcoin011.png" alt="bitcoin011"></p>
 <ul>
 <li>
 <p>多年以后，人们将会回想起，比特币被人看作庞氏骗局，且还能被普通人拥有的那些遥远的岁月！</p>
