--- a/plan/index.html
+++ b/plan/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
+ 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
 <meta name="keywords" content="" />
 
@@ -20,7 +20,7 @@
 <meta property="og:description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
+ 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/plan/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
+ 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”"/>
 
 
@@ -46,10 +46,10 @@
 <meta itemprop="description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
  比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容（也可能，就不写了）😴
+ 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”">
 
-<meta itemprop="wordCount" content="18"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
+<meta itemprop="wordCount" content="19"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -273,7 +273,7 @@
 <li>比特币微科幻；</li>
 <li>中本聪文集（电子邮件、论坛帖子、代码、白皮书）；</li>
 </ul>
-<p>-&gt;<strong>远期可能会加入的内容</strong>（也可能，就不写了）😴</p>
+<p>-&gt;<strong>远期可能会加入的内容</strong> 😴</p>
 <ul>
 <li>上海印象</li>
 <li>MetaMask介绍</li>
