--- a/plan/index.html
+++ b/plan/index.html
@@ -10,8 +10,8 @@
 <meta name="title" content="计划" />
 <meta name="description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
- 比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
+ 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总  -&gt;持续更新的内容 🔥
+ 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书）  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
 <meta name="keywords" content="" />
 
@@ -19,8 +19,8 @@
 <meta property="og:title" content="计划" />
 <meta property="og:description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
- 比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
+ 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总  -&gt;持续更新的内容 🔥
+ 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书）  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/plan/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
@@ -36,8 +36,8 @@
 <meta name="twitter:title" content="计划"/>
 <meta name="twitter:description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
- 比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
+ 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总  -&gt;持续更新的内容 🔥
+ 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书）  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”"/>
 
 
@@ -45,8 +45,8 @@
 <meta itemprop="name" content="计划">
 <meta itemprop="description" content="⏰ 内容更新计划
  -&gt;近期将要完成的内容 🚀
- 比特币闪电网络介绍； 科学上网工具介绍； 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；  -&gt;持续更新的内容 🔥
- 闲话比特币； 比特币微科幻； 中本聪文集（电子邮件、论坛帖子、代码、白皮书）；  -&gt;远期可能会加入的内容 😴
+ 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总  -&gt;持续更新的内容 🔥
+ 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书）  -&gt;远期可能会加入的内容 😴
  上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么   “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”">
 
 <meta itemprop="wordCount" content="19"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
@@ -236,11 +236,11 @@
 
 <a href="/category/">分类</a>
 
+<a href="/plan/">计划</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
-
-<a href="/plan/">计划</a>
 
 
 <a href="/blog">全部文章</a>
@@ -263,15 +263,15 @@
 <hr>
 <p>-&gt;<strong>近期将要完成的内容</strong> 🚀</p>
 <ul>
-<li>比特币闪电网络介绍；</li>
-<li>科学上网工具介绍；</li>
-<li>伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总；</li>
+<li>比特币闪电网络介绍</li>
+<li>科学上网工具介绍</li>
+<li>伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总</li>
 </ul>
 <p>-&gt;<strong>持续更新的内容</strong> 🔥</p>
 <ul>
-<li>闲话比特币；</li>
-<li>比特币微科幻；</li>
-<li>中本聪文集（电子邮件、论坛帖子、代码、白皮书）；</li>
+<li><a href="https://reardonyang.com/blog/%E9%97%B2%E8%AF%9D%E6%AF%94%E7%89%B9%E5%B8%81/">闲话比特币</a></li>
+<li><a href="https://reardonyang.com/blog/%E6%AF%94%E7%89%B9%E5%B8%81%E5%BE%AE%E7%A7%91%E5%B9%BB/">比特币微科幻</a></li>
+<li>中本聪文集（电子邮件、论坛帖子、代码、白皮书）</li>
 </ul>
 <p>-&gt;<strong>远期可能会加入的内容</strong> 😴</p>
 <ul>
