--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
 <a href="/category/">分类</a>
 
+<a href="/plan/">计划</a>
+
 <a href="/tool/">工具</a>
 
 <a href="/copyright/">版权</a>
-
-<a href="/plan/">计划</a>
 
 
 <a href="/blog">全部文章</a>
@@ -253,8 +253,8 @@
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
 <li><a href="https://tippin.me/@ReardonYang">(₿ ᴥ ₿)</a></li>
-<li>₿-BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
-<li>Ð-DOGE：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
+<li>BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
+<li>DOGE：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
 </ul>
 <hr>
 <p><code>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</code></p>
