post a new plan house

--- a/plan/index.html
+++ b/plan/index.html
@@ -280,6 +280,7 @@
 <li>影响我的作家</li>
 <li>接触比特币的那一年，我在做什么</li>
 </ul>
+<p><img src="/images/plan.jpg" alt="plan-house"></p>
 <hr>
 <p><code>“禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”</code></p>
 
