--- a/记一次丢失找回比特币事件/index.html
+++ b/记一次丢失找回比特币事件/index.html
@@ -337,7 +337,7 @@
 </li>
 </ul>
 <hr>
-<p><strong>通过这次“丢失&amp;找回比特币”事件，我获得的经验教训是：</strong></p>
+<h2 id="通过这次事件我获得的经验教训是">通过这次事件，我获得的经验教训是：</h2>
 <ol>
 <li>
 <p>如果你打算同步比特币全节点，在2021年的今天，请准备一个至少1T的固态硬盘，有条件建议直接上<strong>2T或者4T</strong>；</p>
