--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="杨靖武" />
-<meta name="keywords" content="世界旅行,区块链,操作教程,比特币,比特币微科幻,生活点滴,闲话比特币," />
+<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,树莓派,比特币,比特币微科幻,生活点滴,闲话比特币," />
 
 
 <meta property="og:title" content="404 Page not found" />
