--- a/闲话比特币012法币的底层是暴力比特币的底层是算力/index.html
+++ b/闲话比特币012法币的底层是暴力比特币的底层是算力/index.html
@@ -9,7 +9,7 @@
 <title>闲话比特币012：法币的底层是暴力，比特币的底层是算力 | 杨靖武</title>
 <meta name="title" content="闲话比特币012：法币的底层是暴力，比特币的底层是算力" />
 <meta name="description" content="  如何缓解/消除一个庞氏骗局，答案是，制造另一个庞氏骗局。
-  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币。
+  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币!
   如果天堂有赌桌，那一定是加密货币的模样。
   今天世界的财富（肉体，物质，精神），比历史上任何时候都要平均，你的肉体被你自己所拥有，而不会被衙门和酷吏随意鱼肉；物质的获取门槛史无前例的降低，质量前所未有的优秀；人类精神财富的获取成本近乎为零，散乱在整个互联网，技术上难以被教会和朝廷钳制。我们处在史上最平均的时代，就连铸币权，我们韭菜们，长鹏们，一龙们，笑来们，也能分一杯羹了。
   这是我能想象的最好的时代，你从凉州，到荆州，再到益州，你不再需要考虑你的马匹扛不扛得住操，或者你的油老虎能不能补充到黑色的有毒液体，你的五菱MINI，东风E70，配上随身充，随处给电，随给随走。
@@ -20,7 +20,7 @@
 
 <meta property="og:title" content="闲话比特币012：法币的底层是暴力，比特币的底层是算力" />
 <meta property="og:description" content="  如何缓解/消除一个庞氏骗局，答案是，制造另一个庞氏骗局。
-  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币。
+  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币!
   如果天堂有赌桌，那一定是加密货币的模样。
   今天世界的财富（肉体，物质，精神），比历史上任何时候都要平均，你的肉体被你自己所拥有，而不会被衙门和酷吏随意鱼肉；物质的获取门槛史无前例的降低，质量前所未有的优秀；人类精神财富的获取成本近乎为零，散乱在整个互联网，技术上难以被教会和朝廷钳制。我们处在史上最平均的时代，就连铸币权，我们韭菜们，长鹏们，一龙们，笑来们，也能分一杯羹了。
   这是我能想象的最好的时代，你从凉州，到荆州，再到益州，你不再需要考虑你的马匹扛不扛得住操，或者你的油老虎能不能补充到黑色的有毒液体，你的五菱MINI，东风E70，配上随身充，随处给电，随给随走。
@@ -39,7 +39,7 @@
 
 <meta name="twitter:title" content="闲话比特币012：法币的底层是暴力，比特币的底层是算力"/>
 <meta name="twitter:description" content="  如何缓解/消除一个庞氏骗局，答案是，制造另一个庞氏骗局。
-  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币。
+  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币!
   如果天堂有赌桌，那一定是加密货币的模样。
   今天世界的财富（肉体，物质，精神），比历史上任何时候都要平均，你的肉体被你自己所拥有，而不会被衙门和酷吏随意鱼肉；物质的获取门槛史无前例的降低，质量前所未有的优秀；人类精神财富的获取成本近乎为零，散乱在整个互联网，技术上难以被教会和朝廷钳制。我们处在史上最平均的时代，就连铸币权，我们韭菜们，长鹏们，一龙们，笑来们，也能分一杯羹了。
   这是我能想象的最好的时代，你从凉州，到荆州，再到益州，你不再需要考虑你的马匹扛不扛得住操，或者你的油老虎能不能补充到黑色的有毒液体，你的五菱MINI，东风E70，配上随身充，随处给电，随给随走。
@@ -50,7 +50,7 @@
 
 <meta itemprop="name" content="闲话比特币012：法币的底层是暴力，比特币的底层是算力">
 <meta itemprop="description" content="  如何缓解/消除一个庞氏骗局，答案是，制造另一个庞氏骗局。
-  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币。
+  法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币!
   如果天堂有赌桌，那一定是加密货币的模样。
   今天世界的财富（肉体，物质，精神），比历史上任何时候都要平均，你的肉体被你自己所拥有，而不会被衙门和酷吏随意鱼肉；物质的获取门槛史无前例的降低，质量前所未有的优秀；人类精神财富的获取成本近乎为零，散乱在整个互联网，技术上难以被教会和朝廷钳制。我们处在史上最平均的时代，就连铸币权，我们韭菜们，长鹏们，一龙们，笑来们，也能分一杯羹了。
   这是我能想象的最好的时代，你从凉州，到荆州，再到益州，你不再需要考虑你的马匹扛不扛得住操，或者你的油老虎能不能补充到黑色的有毒液体，你的五菱MINI，东风E70，配上随身充，随处给电，随给随走。
@@ -282,7 +282,7 @@
 <p>如何缓解/消除一个庞氏骗局，答案是，制造另一个庞氏骗局。</p>
 </li>
 <li>
-<p>法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币。</p>
+<p>法币的底层是暴力，比特币的底层是算力。如果你垄断了暴力，你就垄断了法币。如果你垄断了算力，你就垄断了比特币!</p>
 </li>
 <li>
 <p>如果天堂有赌桌，那一定是加密货币的模样。</p>
