--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>杨靖武</title>
 <meta name="title" content="杨靖武" />
 <meta name="description" content="杨靖武" />
-<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,树莓派,比特币,比特币微科幻,生活点滴,闲话比特币," />
+<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,比特币,比特币微科幻,生活点滴,闲话比特币," />
 
 
 <meta property="og:title" content="" />
