--- a/辛丑/index.html
+++ b/辛丑/index.html
@@ -288,7 +288,8 @@
 </p>
 
 <content>
-  <p>2021年，30岁。</p>
+  <p><img src="/images/2021.jpeg" alt="2021"></p>
+<p>2021年，30岁。</p>
 <p>没有想象中那么沉重，没有青年危机，没有彻夜难眠，也没有想象中三十而立的使命感。</p>
 <p>2021很平静，甚至说，有点乏味。</p>
 <p>这一年，从软件园换到生态园，然后又到松坪山。仿佛再次回到起点。</p>
